Add game ending logic

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
         <div class="cell"></div>
         <div class="cell"></div>
     </div>
+    <div id="game-over-message" hidden></div>
+    <button id="restart-button" hidden>Restart</button>
 </body>
 </html>
