Add custom names and start game button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 </head>
 <body>
     <h1>Tic Tac Toe</h1>
+    <label for="player1-name">Player 1 (X): </label>
+    <input type="text" id="player1-name" value="Add name here...">
+    <br>
+    <label for="player2-name">Player 2 (O): </label>
+    <input type="text" id="player2-name" value="Add name here...">
+    <br>
+    <button id="start-button">Start Game</button>
+
     <div id="game-board">
         <div class="cell"></div>
         <div class="cell"></div>
