Add error message when names are unfilled

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <input type="text" id="player2-name" value="Add name here...">
         <br>
         <button id="start-button">Start Game</button>
+        <p id="error-message"></p>
     </div>
 
     <div id="game-board">
